...
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Presentacion.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </GridLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButtonEjsFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4D4FF"
            android:src="@drawable/baseline_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86"
            tools:ignore="MissingConstraints"
            android:contentDescription="Crear Ejercicio" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
