<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/exerciseButton"
        android:icon="@drawable/pesaicon"
        android:title="Ejercicios"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/routineButton"
        android:icon="@drawable/rutinaicon"
        android:title="Rutinas"
        app:showAsAction="ifRoom"
        />

</menu>